<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.AddEditAlarmFragment">

    <include
        android:id="@+id/xyz"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/xyz">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/android_material_design_padding"
            android:paddingTop="@dimen/android_material_design_padding"
            android:paddingRight="@dimen/android_material_design_padding"
            android:paddingBottom="@dimen/android_material_design_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Time" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/divider" />

            <TimePicker
                android:id="@+id/edit_alarm_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:timePickerMode="spinner"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/divider" />

            <EditText
                android:id="@+id/edit_alarm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/add_label_hint"
                android:inputType="textCapWords"
                android:maxLength="15"
                android:textColor="@color/secondary_text"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Days" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/divider" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/monday"
                    tools:text="Monday" />

                <CheckBox
                    android:id="@+id/edit_alarm_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/tuesday"
                    tools:text="Tuesday" />

                <CheckBox
                    android:id="@+id/edit_alarm_tues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/wednesday"
                    tools:text="Wednesday" />

                <CheckBox
                    android:id="@+id/edit_alarm_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/thursday"
                    tools:text="Thursday" />

                <CheckBox
                    android:id="@+id/edit_alarm_thurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/friday"
                    tools:text="Friday" />

                <CheckBox
                    android:id="@+id/edit_alarm_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/saturday"
                    tools:text="Saturday" />

                <CheckBox
                    android:id="@+id/edit_alarm_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small"
                    android:text="@string/sunday"
                    tools:text="Sunday" />

                <CheckBox
                    android:id="@+id/edit_alarm_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_padding_vertical_small" />
            </GridLayout>
            
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>